--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,13 +1,26 @@
-.TH sboconfig 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0" sbotools3
+.TH sboconfig 1 "Pungenday, Aftermath 11, 3190 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
-sboconfig - set sbotools configuration options.
+.B
+sboconfig
+- set sbotools configuration options.
 .SH SYNOPSIS
 .P
-sboconfig [-h|-v] [-l] [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] [-p /path|FALSE] [-s /path|/usr/sbo] [-B branch_name|FALSE] [-b TRUE|FALSE] [-o /path|FALSE] [-V #.#|FALSE] [-r url|FALSE] [-R TRUE|FALSE]
+sboconfig [-h|-v]
+.P
+sboconfig [-l]
+.P
+sboconfig [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] [-p /path|FALSE] [-s /path|/usr/sbo] [-B branch_name|FALSE] [-b TRUE|FALSE] [-o /path|FALSE] [-V #.#|FALSE] [-r url|FALSE] [-R TRUE|FALSE]
 .SH DESCRIPTION
 .P
-sboconfig is a front-end for managing sbotools configuration options. The sbotools.conf(5) file can also be manually edited; any fields not relevant to sbotools configuration will be ignored.
+.B
+sboconfig
+is a front-end for managing sbotools3 configuration
+options. The
+.B
+sbotools.conf(5)
+file can also be manually edited; any fields not
+relevant to sbotools configuration will be ignored.
 .SH OPTIONS
 .P
 -h|--help
@@ -22,79 +35,238 @@ Show version information.
 .P
 -l|--list
 .RS
-List out current configuration options, including unmodified default configuration options (meaning that if a given option is not set in the sbotools.conf(5) file, the default will be shown for that option). Also shows the flag to sboconfig used to set each option.
+List the current configuration options, including
+unmodified defaults.
+.B
+--list
+also shows the
+.B
+sboconfig
+flag used to set each option for reference.
 .RE
 .P
 -B|--branch (FALSE|branch_name)
 .RS
-GIT_BRANCH: If FALSE, use the default git branch for the Slackware version, if any. If branch_name, attempt to change branches to branch_name when using sbosnap(1) or sbocheck(1) with an upstream git repository.
+.B
+GIT_BRANCH\fR\
+\&: If
+.B
+FALSE\fR\
+\&, use the default git branch for the Slackware
+version, if any. If
+.B branch_name\fR\
+\&, attempt to change
+branches to
+.B
+branch_name
+when using
+.B
+sbosnap(1)
+or
+.B
+sbocheck(1)
+with an upstream git repository.
 .RE
 .P
 -b|--build-ignore (FALSE|TRUE)
 .RS
-BUILD_IGNORE: If TRUE, only do upgrades if the version number differs. By default, upgrades are done when the build number of the SlackBuild differs as well.
+.B
+BUILD_IGNORE\fR\
+\&: If
+.B
+TRUE\fR\
+\&, do not perform upgrades unless the
+version number differs. By default, upgrades
+also occur when the build number differs.
 .RE
 .P
 -c|--noclean (FALSE|TRUE)
 .RS
-NOCLEAN: If TRUE, then DO NOT clean working directories after building the SlackBuild. These are the directories where the source is unpacked and compiled, and where the package is put together in, which are under /tmp/SBo (or $TMP). By default, these directories are removed after building an SlackBuild. Setting this option to TRUE causes the working directories to not be cleaned by default. This can be overridden when running sboupgrade(1)/sboinstall(1).
+.B
+NOCLEAN\fR\
+\&:If
+.B
+TRUE\fR\
+\&, do not clean working directories after building.
+These are the build and
+.I
+package-(sbo)
+directories under
+.I
+/tmp/SBo
+(or $TMP).
+
 .RE
 .P
 -d|--distclean (FALSE|TRUE)
 .RS
-DISTCLEAN: If TRUE, then DO remove the source code after building the SlackBuild. By default, the source code is not removed, and lives under $SBO_HOME/distfiles, which, by default, is /usr/sbo/distfiles. Setting this option to TRUE causes the source code to be removed by default. This can be overridden when running sboupgrade(1)/sboinstall(1).
+.B
+DISTCLEAN\fR\
+\&: If
+.B
+TRUE\fR\
+\&, then remove the source archives after building. They
+are retained in
+.I
+usr/sbo/distfiles
+(with
+.B
+SBO_HOME\fR\
+\&=
+.I
+/usr/sbo\fR\
+\&)
+by default.
 .RE
 .P
 -j|--jobs (FALSE|#)
 .RS
-JOBS: If numeric (2,5,10, etc), then that number will be fed to the "-j" argument to make when a SlackBuild which invokes "make" is run. This only makes sense on multicore systems, where one might set the JOBS to the number of available cores, or half that number, etc.
+.B
+JOBS\fR\
+\&: If
+.B
+numerical\fR\
+\&, pass to the
+.B
+-j
+argument when a SlackBuild invoking
+.B
+make
+is run.
 .RE
 .P
 -p|--pkg-dir (FALSE|/path)
 .RS
-PKG_DIR: If set to a path, packages will be stored at the given location after building and installing. By default, packages are left where they are deposited by SlackBuilds, which is typically (probably always) /tmp (or $OUTPUT). If PKG_DIR is FALSE and DISTCLEAN is TRUE (either in sbotools.conf(5) or at sboupgrade/sboinstall runtime), the package will be deleted. If this option is set to a path in the filesystem, the package will be stored in that directory, regardless of any DISTCLEAN option.
+.B
+PKG_DIR\fR\
+\&: If set to a
+.B
+path\fR\
+\&, packages will be stored there after installation. This
+overrides the
+.B
+DISTCLEAN
+setting for saved packages.
 .RE
 .P
 -s|--sbo-home (/usr/sbo|/path)
 .RS
-SBO_HOME: If set to a path, this is where the slackbuilds.org tree will live; by default, /usr/sbo will be used. If the tree should live elsewhere, this option can be set to the path where the tree should live. Note that if you set this option after fetching the tree to a different location (such as the default), you will need to fetch the tree again.
+.B
+SBO_HOME\fR\
+\&: If set to a
+.B
+path\fR\
+\&, this is where the
+.I
+slackbuilds.org
+tree will be stored. The default setting is
+.I
+/usr/sbo\fR\
+\&. The tree must be re-downloaded with
+.B
+sbosnap fetch
+if the
+.B
+SBO_HOME
+setting changes.
 .RE
 .P
 -o|--local-overrides (FALSE|/path)
 .RS
-LOCAL_OVERRIDES: If set to a path, any directory name under that path that matches a SlackBuild name will be used instead of anything found on SBo. This will even work if it is not on SBo at all. It still requires all the usual files present in an SBo directory such as README, name.info, and name.SlackBuild.
+.B
+LOCAL_OVERRIDES\fR\
+\&: If set to a
+.B
+path\fR\
+\&, any directory name under that path matching a
+SlackBuild name will be used in preference to the
+in-tree version. This will work even if the SlackBuild
+is out-of-tree. README, slack-desc, an .info file and
+a SlackBuild must all be present.
 .RE
 .P
 -V|--slackware-version (FALSE|#.#)
 .RS
-SLACKWARE_VERSION: If set to a version specification, use the SBo repository for that version instead of the one you can find in /etc/slackware-version.
+.B
+SLACKWARE_VERSION\fR\
+\&: If set to a
+.B
+version number\fR\
+\&, use the
+.I
+slackbuilds.org
+repository for that version of Slackware rather than
+the one specified in
+.I
+/etc/slackware-version\fR\
+\&.
 .RE
 .P
 -r|--repo (FALSE|url)
 .RS
-REPO: If set to a url, use that repository instead of the slackbuilds.org repository for your SLACKWARE_VERSION. Setting this will make the SLACKWARE_VERSION setting redundant. URLs need to either lead to a git repository or an rsync repository. The repository needs to be laid out like the slackbuilds.org one with a couple of broad categories at the root and under those are subdirectories for each package.
+.B
+REPO\fR\
+\&: If set to a git or rsync
+.B
+URL\fR\
+\&, use that repository instead of the
+.B
+sbotools3
+default for your
+.B
+SLACKWARE_VERSION\fR\
+\&. The default repositories are under
+.I
+rsync://slackbuilds.org/slackbuilds
+if
+.B
+RSYNC_DEFAULT
+is
+.B
+TRUE
+and
+.I
+https://gitlab.com/SlackBuilds.org
+otherwise. The repository must be laid out in the same
+manner as one found at
+.I
+https://git.slackbuilds.org/slackbuilds\fR\
+\&, such that SlackBuild directories are under the
+category directories.
 .RE
 .P
 -R|--rsync (FALSE|TRUE)
 .RS
-RSYNC_DEFAULT: If set to TRUE, use rsync default mirrors except for Slackware -current.
+RSYNC_DEFAULT\fR\
+\&: If set to
+.B
+TRUE\fR\
+\&, use rsync default mirrors except for Slackware -current.
 .RE
 .SH EXIT CODES
 .P
-sboconfig can exit with the following codes:
+.B
+sboconfig
+can exit with the following codes:
 .RS
 
-0: all operations were succesful.
+0: all operations were successful.
 .RE
 .RS
-1: a usage error occurred, such as trying to specify invalid options.
+1: a usage error occurred (e.g. passing invalid option specifications)
 .RE
 .RS
-6: sboconfig was unable to obtain a required file handle.
+6:
+.B
+sboconfig
+was unable to obtain a required file handle.
 .RE
 .SH BUGS
 .P
-None known, but there may be some. Please report any found to https://github.com/pghvlaans/sbotools3/issues ; patches are always welcome.
+None known. If found, Issues and Pull Requests to
+.I
+https://github.com/pghvlaans/sbotools3/
+are always welcome.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5)
