--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -1,13 +1,33 @@
-.TH sbofind 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0" sbotools3
+.TH sbofind 1 "Pungenday, Aftermath 45, 3185 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
-sbofind - search slackbuilds.org tree for a given name
+.B
+sbofind
+- search the local copy of the
+.I
+slackbuilds.org
+tree for a given name
 .SH SYNOPSIS
 .P
-sbofind [-h|-v] [-etirq] search_term
+sbofind [-h|-v]
+.P
+sbofind [-etirq] search_term
 .SH DESCRIPTION
 .P
-sbofind searches the names of all SlackBuilds for a given term. It reports back any SlackBuilds found along with the path for each. This is equivalent to running "cd /usr/ports; make search name=$search_term display=name,path" on a FreeBSD system. If the repository includes a TAGS.txt file, that will be used to find more results as well.
+.B
+sbofind
+searches the names of all available SlackBuilds for a
+given term. It reports back any SlackBuilds found along
+with path and version information. This is equivalent to
+running
+.RS
+.B
+cd /usr/ports; make search name=$search_term display=name,path
+.RE
+on a FreeBSD system. If the repository includes a
+.I
+TAGS.txt
+file, that will be used to find additional results.
 .SH OPTIONS
 .P
 -h|--help
@@ -22,12 +42,12 @@ Show version information.
 .P
 -e|--exact
 .RS
-Only exact matching.
+Exact matching only.
 .RE
 .P
 -t|--no-tags
 .RS
-Exclude tags from search.
+Exclude tags from the search.
 .RE
 .P
 -i|--info
@@ -46,20 +66,28 @@ Show the build queue for each SlackBuild found.
 .RE
 .SH EXIT CODES
 .P
-sbofind can exit with the following exit codes:
+sbofind can exit with the following codes:
 .RS
 
 0: all operations were succesful.
 .RE
 .RS
-1: a usage error occured, ie sbofind was ran with nothing to find.
+1: a usage error occured (i.e.
+.B
+sbofind
+ran with nothing to find)
 .RE
 .RS
-6: sbofind was unable to obtain a required file handle.
+6:
+.B
+sbofind was unable to obtain a required file handle.
 .RE
 .SH BUGS
 .P
-None known, but there may be some. Please report any found to https://github.com/pghvlaans/sbotools3/issues ; patches are always welcome.
+None known. If found, Issues and Pull Requests to
+.I
+https://github.com/pghvlaans/sbotools3/
+are always welcome.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5)
