--- a/man1/sbosnap.1
+++ b/man1/sbosnap.1
@@ -1,13 +1,53 @@
-.TH sbosnap 1 "Pungenday, Discord 45, 3185 YOLD" "sbotools3 1.0" sbotools3
+.TH sbosnap 1 "Pungenday, Aftermath 11, 3190 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
-sbosnap - slackbuilds.org tree fetch and update command.
+.B
+sbosnap
+-
+.I
+slackbuilds.org
+tree fetch and update command
 .SH SYNOPSIS
 .P
-sbosnap [-h|-v] (fetch|update)
+sbosnap [-h|-v]
+.P
+sbosnap (fetch|update)
 .SH DESCRIPTION
 .P
-sbosnap is used to download and update a local copy of the slackbuilds.org tree, minus the .tar.gz{,.asc} files. Note that sbocheck(1) will also update the tree, and will then also check for updated SlackBuilds. rsync is used for both operations.
+.B
+sbosnap
+is used to download and update a local copy of the
+.I
+slackbuilds.org
+tree, without the
+.I
+*.tar.gz{,.asc}
+files. Note that
+.B
+sbocheck(1)
+also updates the tree and checks for updated and removed
+SlackBuilds.
+.B
+rsync
+is used for rsync repositories, and
+.B
+git
+is used for git repositories.
+.B
+sbotools3
+defaults to git unless
+.B
+RSYNC_DEFAULT
+is
+.B
+TRUE\fR\
+\&. See
+.B
+sboconfig(1)
+or
+.B
+sbotools.conf(5)\fR\
+\&.
 .SH OPTIONS
 .P
 -h|--help
@@ -23,16 +63,35 @@ Show version information.
 .P
 fetch
 .RS
-Download a local copy of the slackbuilds.org tree. The copy will be downloaded to the SBO_HOME setting (see sboconfig(1) and sbotools.conf(5)), which, by default, is /usr/sbo
+Download a local copy of the
+.I
+slackbuilds.org
+tree. The copy will be downloaded to the path in the
+.B
+SBO_HOME
+setting (see
+.B
+sboconfig(1)
+and
+sbotools.conf(5)\fR\
+\&),
+.I
+/usr/sbo
+by default.
 .RE
 .P
 update
 .RS
-Update a previously fetch'd copy of the slackbuilds.org tree.
+Update a previously fetch'd copy of the
+.I
+slackbuilds.org
+tree.
 .RE
 .SH EXIT CODES
 .P
-sbosnap can exit with the following codes:
+.B
+sbosnap
+can exit with the following codes:
 .RS
 
 0: all operations completed successfully.
@@ -45,7 +104,10 @@ sbosnap can exit with the following codes:
 .RE
 .SH BUGS
 .P
-None known, but there may be some. Please report any found to https://github.com/pghvlaans/sbotools3/issues ; patches are always welcome.
+None known. If found, Issues and Pull Requests to
+.I
+https://github.com/pghvlaans/sbotools3/
+are always welcome.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5)
