--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -30,43 +30,52 @@ TAGS.txt
 file, that will be used to find additional results.
 .SH OPTIONS
 .P
+.B
 -h|--help
 .RS
 Show help information.
 .RE
 .P
+.B
 -v|--version
 .RS
 Show version information.
 .RE
 .P
+.B
 -e|--exact
 .RS
 Exact matching only.
 .RE
 .P
+.B
 -t|--no-tags
 .RS
 Exclude tags from the search.
 .RE
 .P
+.B
 -i|--info
 .RS
 Show the contents of the .info file for each SlackBuild found.
 .RE
 .P
+.B
 -r|--readme
 .RS
 Show the contents of the README file for each SlackBuild found.
 .RE
 .P
+.B
 -q|--queue
 .RS
 Show the build queue for each SlackBuild found.
 .RE
 .SH EXIT CODES
 .P
-sbofind can exit with the following codes:
+.B
+sbofind
+can exit with the following codes:
 .RS
 
 0: all operations were succesful.
@@ -80,7 +89,8 @@ ran with nothing to find)
 .RS
 6:
 .B
-sbofind was unable to obtain a required file handle.
+sbofind
+was unable to obtain a required file handle.
 .RE
 .SH BUGS
 .P
