--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -3,7 +3,10 @@
 .P
 .B
 sbocheck
-- update a local slackbuilds.org tree and check for updates.
+- update a local
+.B
+slackbuilds.org
+tree and check for updates.
 .SH SYNOPSIS
 .P
 sbocheck [-h|-v]
@@ -11,23 +14,28 @@ sbocheck [-h|-v]
 .P
 .B
 sbocheck
-first updates a previously-fetched copy of the slackbuilds.org
+first updates a previously-fetched copy of the
+.B
+slackbuilds.org
 tree (see
 .B
 sbosnap(1)\fR\
 \&) checks for available upgrades, and reports what it finds.
 SlackBuilds with differing build numbers are reported separately,
-as are any SlackBuilds marked _SBo that are not found in the
+as are any SlackBuilds marked
+.I 
+_SBo\fR\
+ that are not found in the
 repository.
 .P
 The three output categories are logged separately to
-.I
+.I 
 /etc/sbocheck.log\fR\
 \&,
-.I
-/etc/sbocheck-bumps.log
-and
-.I
+.I 
+/etc/sbocheck-bumps.log\fR\
+ and
+.I 
 /etc/sbocheck-out-of-tree.log\fR\
 \&.
 .SH OPTIONS
@@ -46,8 +54,8 @@ Show version information.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
-.I
-https://github.com/pghvlaans/sbotools3/
+.UR https://github.com/pghvlaans/sbotools3/
+.UE
 are always welcome.
 .SH SEE ALSO
 .P
