--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -3,7 +3,9 @@
 .P
 .B
 sboconfig
-- set sbotools configuration options.
+- set
+.B
+sbotools3 configuration options.
 .SH SYNOPSIS
 .P
 sboconfig [-h|-v]
@@ -15,12 +17,17 @@ sboconfig [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] [-p /path|FALSE] [-s /pat
 .P
 .B
 sboconfig
-is a front-end for managing sbotools3 configuration
+is a front-end for managing
+.B
+sbotools3
+configuration
 options. The
 .B
 sbotools.conf(5)
 file can also be manually edited; any fields not
-relevant to sbotools configuration will be ignored.
+relevant to
+.B
+sbotools3 configuration will be ignored.
 .SH OPTIONS
 .P
 .B
@@ -95,12 +102,15 @@ NOCLEAN\fR\
 TRUE\fR\
 \&, do not clean working directories after building.
 These are the build and
-.I
-package-(sbo)
-directories under
-.I
-/tmp/SBo
-(or $TMP).
+.I 
+package-(sbo)\fR\
+ directories under
+.I 
+/tmp/SBo\fR\
+ (or
+.I 
+$TMP\fR\
+\&).
 .RE
 .P
 .B
@@ -113,16 +123,12 @@ DISTCLEAN\fR\
 TRUE\fR\
 \&, then remove the source archives after building. They
 are retained in
-.I
-usr/sbo/distfiles
-(with
+.I 
+/usr/sbo/distfiles\fR\
+ (with default
 .B
 SBO_HOME\fR\
-\&=
-.I
-/usr/sbo\fR\
-\&)
-by default.
+\&).
 .RE
 .P
 .B
@@ -166,10 +172,10 @@ SBO_HOME\fR\
 .B
 path\fR\
 \&, this is where the
-.I
+.B
 slackbuilds.org
 tree will be stored. The default setting is
-.I
+.I 
 /usr/sbo\fR\
 \&. The tree must be re-downloaded with
 .B
@@ -191,8 +197,16 @@ path\fR\
 \&, any directory name under that path matching a
 SlackBuild name will be used in preference to the
 in-tree version. This will work even if the SlackBuild
-is out-of-tree. README, slack-desc, an .info file and
-a SlackBuild must all be present.
+is out-of-tree.
+.I 
+README\fR\
+\&,
+.I 
+slack-desc\fR\
+\&, an
+.I 
+info\fR\
+ file and a SlackBuild must all be present.
 .RE
 .P
 .B
@@ -204,11 +218,11 @@ SLACKWARE_VERSION\fR\
 .B
 version number\fR\
 \&, use the
-.I
+.B
 slackbuilds.org
 repository for that version of Slackware rather than
 the one specified in
-.I
+.I 
 /etc/slackware-version\fR\
 \&.
 .RE
@@ -228,8 +242,8 @@ default for your
 .B
 SLACKWARE_VERSION\fR\
 \&. The default repositories are under
-.I
-rsync://slackbuilds.org/slackbuilds
+.UR rsync://slackbuilds.org/slackbuilds
+.UE
 if
 .B
 RSYNC_DEFAULT
@@ -237,19 +251,20 @@ is
 .B
 TRUE
 and
-.I
-https://gitlab.com/SlackBuilds.org
+.UR https://gitlab.com/SlackBuilds.org
+.UE
 otherwise. The repository must be laid out in the same
 manner as one found at
-.I
-https://git.slackbuilds.org/slackbuilds\fR\
-\&, such that SlackBuild directories are under the
+.UR https://git.slackbuilds.org/slackbuilds
+.UE
+such that SlackBuild directories are under the
 category directories.
 .RE
 .P
 .B
 -R|--rsync (FALSE|TRUE)
 .RS
+.B
 RSYNC_DEFAULT\fR\
 \&: If set to
 .B
@@ -277,8 +292,8 @@ was unable to obtain a required file handle.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
-.I
-https://github.com/pghvlaans/sbotools3/
+.UR https://github.com/pghvlaans/sbotools3/
+.UE
 are always welcome.
 .SH SEE ALSO
 .P
