man pages: change the date.

--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,4 +1,4 @@
-.TH sboconfig 1 "Pungenday, Aftermath 11, 3190 YOLD" "sbotools3 1.0" sbotools3
+.TH sboconfig 1 "Setting Orange, The Aftermath 11, 3190 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
 .B
