--- a/man1/sbosnap.1
+++ b/man1/sbosnap.1
@@ -1,4 +1,4 @@
-.TH sbosnap 1 "Pungenday, Aftermath 11, 3190 YOLD" "sbotools3 1.0" sbotools3
+.TH sbosnap 1 "Setting Orange, The Aftermath 11, 3190 YOLD" "sbotools3 1.0" sbotools3
 .SH NAME
 .P
 .B
