Slackbuild from commit, man page tweaks.

--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -5,7 +5,8 @@
 sboconfig
 - set
 .B
-sbotools3 configuration options.
+sbotools3
+configuration options.
 .SH SYNOPSIS
 .P
 sboconfig [-h|-v]
@@ -27,7 +28,8 @@ sbotools.conf(5)
 file can also be manually edited; any fields not
 relevant to
 .B
-sbotools3 configuration will be ignored.
+sbotools3
+configuration will be ignored.
 .SH OPTIONS
 .P
 .B
