--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -4,7 +4,7 @@
 .B
 sbofind
 - search the local copy of the
-.I
+.B
 slackbuilds.org
 tree for a given name
 .SH SYNOPSIS
@@ -28,9 +28,9 @@ cd /usr/ports; make search name=$search_term display=name,path\fR\
 
 .RE
 on a FreeBSD system. If the repository includes a
-.I
-TAGS.txt
-file, that will be used to find additional results.
+.I 
+TAGS.txt\fR\
+ file, that will be used to find additional results.
 .SH OPTIONS
 .P
 .B
