--- a/slackbuild/sbotools3/README
+++ b/slackbuild/sbotools3/README
@@ -1,14 +1,16 @@
 sbotools3 (ports-like interface to slackbuilds.org)
 
-sbotools3 is the continuation of sbotools. It is a set of perl scripts
-providing a ports-like automation interface to slackbuilds.org. Its
-features include requirement handling and the ability to handle 32-bit
-and compat32 builds on multilib x86_64 systems.
+sbotools3 is the continuation of sbotools. It is a set of Perl scripts
+providing a ports-like automation interface to slackbuilds.org. Features
+include dependency handling, using a custom git branch, generating
+32-bit and compat32 builds on multilib systems, and more.
 
-There are man pages for each of the sbo* commands, more documentation,
-as well as online versions of the man pages, can be found at the
-project's homepage.
+There is a man page for each included command. For 'executive
+summaries' and online man pages, see the project's home page.
 
-sbotools3 bundles the required Perl module Sort::Versions with. This 
-does not interfere with a copy installed from the CPAN or from
+sbotools3 bundles the required Perl module Sort::Versions. This does
+not interfere with a copy installed from the CPAN or from
 slackbuilds.org.
+
+sbotools3 conflicts with sbotools. Uninstalling sbotools before
+installing sbotools3 is recommended.
