Line-break synopses for easier reading.

--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -13,7 +13,10 @@ sboconfig [-h|-v]
 .P
 sboconfig [-l]
 .P
-sboconfig [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] [-p /path|FALSE] [-s /path|/usr/sbo] [-B branch_name|FALSE] [-b TRUE|FALSE] [-o /path|FALSE] [-V #.#|FALSE] [-r url|FALSE] [-R TRUE|FALSE]
+sboconfig [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] \\
+          [-p /path|FALSE] [-s /path|/usr/sbo] [-B branch_name|FALSE] \\
+          [-b TRUE|FALSE] [-o /path|FALSE] [-V #.#|FALSE] \\
+          [-r url|FALSE] [-R TRUE|FALSE]
 .SH DESCRIPTION
 .P
 .B
