--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -8,7 +8,8 @@ sboinstall
 .P
 sboinstall [-h|-v]
 .P
-sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-ipRr] [--create-template FILE] sbo_name (sbo_name)
+sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] \\
+           [-ipRr] [--create-template FILE] sbo_name (sbo_name)
 .P
 sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-i] --use-template FILE
 .SH DESCRIPTION
