--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -8,7 +8,8 @@ sboupgrade
 .P
 sboupgrade [-h|-v]
 .P
-sboupgrade [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] [-b TRUE|FALSE] [-fiprz] --all|sbo_name (sbo_name)
+sboupgrade [-c TRUE|FALSE] [-d TRUE|FALSE] [-j #|FALSE] \\
+           [-b TRUE|FALSE] [-fiprz] --all|sbo_name (sbo_name)
 .SH DESCRIPTION
 .P
 .B
