--- a/slackbuild/sbotools3/README
+++ b/slackbuild/sbotools3/README
@@ -12,5 +12,10 @@ sbotools3 bundles the required Perl module Sort::Versions. This does
 not interfere with a copy installed from the CPAN or from
 slackbuilds.org.
 
+sbotools3 installs a default configuration file to
+/etc/sbotools/sbotools.conf.new. Existing sbotools.conf files from
+sbotools are compatible, but sbotools users may want to examine
+the new file for added options and annotation.
+
 sbotools3 conflicts with sbotools. Uninstalling sbotools before
 installing sbotools3 is recommended.
