--- a/SBO3-Lib/Changes
+++ b/SBO3-Lib/Changes
@@ -1,4 +1,8 @@
-3.0 - 2024-11-01
+sbotools3
+1.1 - 2024-11-02
+  * Bugfix: incorrect variable name caused sboupgrade to rebuild when unneeded.
+
+1.0 - 2024-11-01
   * Change the git branch to match the Slackware version, or to a user-configured branch
   * Change the default URLs to support Slackware 15.0 and use git repositories
   * Use rsync default mirrors with RSYNC_DEFAULT (except for -current)
